--- a/spring-boot-data-jpa/pom.xml
+++ b/spring-boot-data-jpa/pom.xml
@@ -89,6 +89,12 @@
 			<version>2.4.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-oxm</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
